--- a/DisplayDriverALU4_4FP/DisplayDriverALU4_4FP.qsf
+++ b/DisplayDriverALU4_4FP/DisplayDriverALU4_4FP.qsf
@@ -61,7 +61,6 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_TEST_BENCH_FILE tb_DisplayDriverALU4_4FP.vhd
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_location_assignment PIN_23 -to i_CLK
 set_location_assignment PIN_127 -to o_DispPoint
 set_location_assignment PIN_137 -to o_Displays[3]
@@ -84,3 +83,12 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to i_Number[2]
 set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to i_Number[1]
 set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to i_Number[0]
 set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to i_Number
+set_location_assignment PIN_72 -to i_Number[0]
+set_location_assignment PIN_73 -to i_Number[1]
+set_location_assignment PIN_74 -to i_Number[2]
+set_location_assignment PIN_75 -to i_Number[3]
+set_location_assignment PIN_76 -to i_Number[4]
+set_location_assignment PIN_77 -to i_Number[5]
+set_location_assignment PIN_80 -to i_Number[6]
+set_location_assignment PIN_83 -to i_Number[7]
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
