--- a/DisplayDriverALU4_4FP/DisplayDriverALU4_4FP.qsf
+++ b/DisplayDriverALU4_4FP/DisplayDriverALU4_4FP.qsf
@@ -94,8 +94,6 @@ set_location_assignment PIN_80 -to i_Number[6]
 set_location_assignment PIN_83 -to i_Number[7]
 set_location_assignment PIN_87 -to o_NumSign
 set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to o_NumSign
-set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to i_MultOp
-set_location_assignment PIN_88 -to i_MultOp
 set_location_assignment PIN_52 -to i_Number[15]
 set_location_assignment PIN_51 -to i_Number[14]
 set_location_assignment PIN_50 -to i_Number[13]
@@ -104,4 +102,6 @@ set_location_assignment PIN_46 -to i_Number[11]
 set_location_assignment PIN_44 -to i_Number[10]
 set_location_assignment PIN_43 -to i_Number[9]
 set_location_assignment PIN_42 -to i_Number[8]
+set_location_assignment PIN_89 -to i_OpSel[0]
+set_location_assignment PIN_88 -to i_OpSel[1]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
